--- a/style.css
+++ b/style.css
@@ -1,35 +1,36 @@
-body{
- /*    margin: 0;
-  padding: 0;
-  height: 100vh;*/
-  background-image: url('images/fondo.jpg'); /* Cambia esto por la ruta real */
-  background-size: cover important!; /* Ajusta la imagen para que cubra toda la pantalla */
-  background-position: center important!; /* Centra la imagen */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
-  background-attachment: fixed important!; 
-  color: #fff;
+:root {
+  /* https://colorhunt.co/palette/113f6734699a58a0c8fdf5aa */
+  --primary-color: #113F67;
+  --secondary-color: #34699A;
+  --tertiary-color: #58A0C8;
+  --text-color: #FDF5AA;
+}
+
+body {
+    background: 
+    linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), /* Capa oscura con opacidad */
+    url('images/fondo.jpg') center center/cover no-repeat;
+  color: var();
   font-family: 'Segoe UI', sans-serif;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
 }
-footer{
+
+footer {
   text-align: center;
   color: #fff;
   text-align: center;
-  
+
 }
-h1{
+
+h1 {
   text-align: center;
   padding-top: 10%;
   padding-left: 10%;
   padding-right: 10%;
 }
 
-.botonesCentral{
+.botonesCentral {
   border-radius: 20%;
-  border-color:#00DBEF;
+  border-color: #00DBEF;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   background-color: transparent;
   color: #00DBEF;
@@ -37,13 +38,14 @@ h1{
   margin-top: 10%;
   margin-left: 10px;
   margin-right: 10px;
- 
+
 }
 
 
 /* Quitar fondo de contenedor bootstrap */
-main, section {
-  background-color: rgba(0, 0, 0, 0.6); /* semitransparente para ver el fondo */
+main,
+section {
+  /* semitransparente para ver el fondo */
   padding: 2rem;
   border-radius: 10px;
   margin-bottom: 2rem;
@@ -77,14 +79,9 @@ form button:hover {
 }
 
 /* Títulos */
-h1, h2 {
+h1,
+h2 {
   font-weight: bold;
-}
-
-
-/* Navbar transparente */
-.navbar {
-  background-color: rgba(0, 123, 255, 0.8) !important;
 }
 
 /* Botón de navegación activa */
@@ -94,29 +91,19 @@ h1, h2 {
 }
 
 /* Responsive hack para evitar scroll horizontal */
-html, body {
+html,
+body {
   overflow-x: hidden;
 }
 
 /* estilos section */
 .section {
-  overflow: hidden;
-  max-height: 90px; /* Altura colapsada, ajusta según tu contenido */
+  background-color: rgba(0, 0, 0, 0.6);
   transition: max-height 1s ease;
   margin-bottom: 10px;
-  background-color: rgba(0, 0, 0, 0.6);
   cursor: pointer;
   border-radius: 10px;
   padding: 10px;
-}
-
-
-.section:hover {
-  transform: scale(1.02); /* Efecto de zoom al pasar el mouse */
-}
-
-.section.expanded {
-  height: auto; /* Se muestra todo si está "expandidado" */
 }
 
 .section h2 {
@@ -131,46 +118,37 @@ html, body {
   transition: opacity 0.5s ease;
 }
 
-.section:hover .content,
-.section.expanded .content {
-  opacity: 1;
-}
-
 .section.expanded .content {
   display: block;
 }
 
 .section.expanded {
- max-height: 500px; /* Altura expandida, ajusta según el contenido real */
+  max-height: 500px;
+  /* Altura expandida, ajusta según el contenido real */
 }
-.section:hover .content {
-  opacity: 1;
-}
-
-/* Hover (solo si NO está expandido) */
-.section:not(.expanded):hover {
-  max-height: 1000px;
-}
-
-.section:not(.expanded):hover .content {
-  opacity: 1;
-}
-
-/* Estado expandido permanente por clic */
-
-#sobreMiTitulo, #proyectosTitulo, #contactoTitulo {
+#sobre-mi-titulo,
+#proyectos-titulo,
+#contacto-titulo,
+#experiencia-titulo {
   text-align: center;
   margin-bottom: 30px;
   font-size: 20px;
 }
 
-#sobreMiCuerpo{
-  background-image: url('images/desarollo.jpg'); /* Cambia esto por la ruta real */
-  background-size: cover !important; /* Ajusta la imagen para que cubra toda la pantalla */
-  background-position: center !important; /* Centra la imagen */
+.icono-empresa,
+#icono-empresa2,
+#icono-empresa3 {
+  background-color: black;
 }
 
+dialog {
+  border: none;
+  border-radius: 10px;
+  padding: 20px;
+  max-width: 500px;
+  text-align: center;
+}
 
-
-
-
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.6);
+}
